--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.10.1",
     "fastify": "^4.13.0",
-    "i": "^0.3.7"
+    "i": "^0.3.7",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.20.6"
   }
 }
